<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_main"
    tools:context=".ui.main.MainActivity">

    <include
        android:id="@+id/view_header"
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/view_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_header">

            <org.imaginativeworld.whynotimagecarousel.ImageCarousel
                android:id="@+id/rv_carousel"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="24dp"
                android:translationZ="8dp"
                app:carouselGravity="CENTER"
                app:carouselPaddingBottom="8dp"
                app:carouselPaddingTop="8dp"
                app:carouselType="SHOWCASE"
                app:imageScaleType="centerCrop"
                app:scaleOnScroll="true"
                app:scalingFactor=".20"
                app:showBottomShadow="false"
                app:showCaption="true"
                app:showIndicator="true"
                app:captionMargin="10dp"
                app:captionTextSize="20sp"
                app:showNavigationButtons="false"
                app:showTopShadow="false" />

            <me.relex.circleindicator.CircleIndicator2
                android:id="@+id/rv_indicator"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                app:ci_animator="@animator/scale_with_alpha"
                app:ci_drawable="@drawable/vw_dot"
                app:ci_drawable_unselected="@drawable/vw_dot" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="18dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/movie_category"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/see_all"
                    android:visibility="gone"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                android:orientation="horizontal"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="20dp"
                tools:listitem="@layout/list_item_category"
                tools:itemCount="2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="18dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/popular"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_see_popular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/see_all"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_mv_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="18dp"
                tools:listitem="@layout/list_item_movie_landscape"
                tools:itemCount="2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="18dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/top_rated"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_see_top_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/see_all"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_mv_top_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="18dp"
                tools:listitem="@layout/list_item_movie_landscape"
                tools:itemCount="2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="18dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/up_coming"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_see_upcoming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/see_all"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_mv_upcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="18dp"
                tools:listitem="@layout/list_item_movie_landscape"
                tools:itemCount="2" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>